# titos-stats-ai

./: .env.example  .gitignore  CLAUDE.md  HOTKEYS.md  Makefile  PROJECT_BRIEF.md  RUNBOOK.md  TAGGING_RULES.md  VPS_SETUP.md  docker-compose.dev.yml
api/: .dockerignore  Dockerfile  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 8a02dd849f78_init.py  8b4f7528bc23_add_full_schema.py  b94bf01b50c6_add_play_time_seconds.py  dd154cf6a3b1_add_week_number_and_court_to_matches.py  faf13f5a780f_widen_players_jersey_range_to_0_999.py
api/scripts/: import_thursday_coed_s1.py
api/src/: config.py  db.py  main.py  models.py  schemas.py  seed.py  stats.py  storage.py
api/src/routers/: matches.py  players.py  plays.py  rallies.py  seasons.py  teams.py  uploads.py  videos.py
api/tests/: conftest.py  test_export.py  test_matches.py  test_plays.py  test_rallies.py  test_roster.py  test_stats.py  test_uploads.py
deploy/: .env.example  Caddyfile  README.md  deploy.sh  docker-compose.yml
docs/: UPLOADING.md
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx  providers.tsx
web/src/components/: header.tsx
web/src/components/players/: player-form-dialog.tsx
web/src/components/seasons/: new-season-dialog.tsx
web/src/components/teams/: new-team-dialog.tsx
web/src/components/tracker/: active-rally-drawer.tsx  end-rally-dialog.tsx  hotkey-bar.tsx  live-stats.tsx  play-rules.ts  rally-panel.tsx  resolve-attribution-dialog.tsx  video-player.tsx
web/src/lib/: api-error.ts  api-types.ts  api.ts  format.ts  upload.ts
(+5 files in other folders)
